--- a/defaults/en.yml
+++ b/defaults/en.yml
@@ -509,6 +509,165 @@ key_names:
   åland_islands: Åland Islands
   albania: Albania
   algeria: Algeria
+  andorra: Andorra
+  angola: Angola
+  anguilla: Anguilla
+  antarctica: Antarctica
+  antigua: Antigua
+  armenia: Armenia
+  aruba: Aruba
+  azerbaijan: Azerbaijan
+  bahrain: Bahrain
+  bangladesh: Bangladesh
+  barbados: Barbados
+  belarus: Belarus
+  belize: Belize
+  benin: Benin
+  bermuda: Bermuda
+  bhutan: Bhutan
+  bolivia: Bolivia
+  bonaire: Bonaire
+  bosnia_and_herzegovina: Bosnia
+  botswana: Botswana
+  bouvet_island: Bouvet
+  brunei: Brunei
+  burkina_faso: Burkina
+  burundi: Burundi
+  cabo_verde: Cabo
+  cambodia: Cambodia
+  cameroon: Cameroon
+  cayman_islands: Cayman
+  central_african_republic: Central
+  chad: Chad
+  christmas_island: Christmas
+  cocos_(keeling)_islands: Cocos
+  colombia: Colombia
+  comoros: Comoros
+  congo: Congo
+  cook_islands: Cook
+  cuba: Cuba
+  curaçao: Curaçao
+  cyprus: Cyprus
+  djibouti: Djibouti
+  dominica: Dominica
+  ecuador: Ecuador
+  egypt: Egypt
+  el_salvador: El
+  equatorial_guinea: Equatorial
+  eritrea: Eritrea
+  eswatini: Eswatini
+  ethiopia: Ethiopia
+  falkland_islands: Falkland
+  faroe_islands: Faroe
+  fiji: Fiji
+  french_guiana: French
+  french_polynesia: French
+  gabon: Gabon
+  gambia: Gambia
+  georgia: Georgia
+  ghana: Ghana
+  gibraltar: Gibraltar
+  greenland: Greenland
+  grenada: Grenada
+  guadeloupe: Guadeloupe
+  guam: Guam
+  guatemala: Guatemala
+  guernsey: Guernsey
+  guinea: Guinea
+  guinea-bissau: Guinea-Bissau
+  guyana: Guyana
+  haiti: Haiti
+  holy_see: Holy
+  honduras: Honduras
+  iraq: Iraq
+  isle_of_man: Isle
+  jamaica: Jamaica
+  jersey: Jersey
+  jordan: Jordan
+  kazakhstan: Kazakhstan
+  kenya: Kenya
+  kiribati: Kiribati
+  kuwait: Kuwait
+  kyrgyzstan: Kyrgyzstan
+  lao: Lao
+  lebanon: Lebanon
+  lesotho: Lesotho
+  liberia: Liberia
+  libya: Libya
+  liechtenstein: Liechtenstein
+  lithuania: Lithuania
+  macao: Macao
+  macedonia: Macedonia
+  madagascar: Madagascar
+  malawi: Malawi
+  maldives: Maldives
+  mali: Mali
+  malta: Malta
+  marshall_islands: Marshall
+  martinique: Martinique
+  mauritania: Mauritania
+  mauritius: Mauritius
+  mayotte: Mayotte
+  micronesia: Micronesia
+  moldova: Moldova
+  monaco: Monaco
+  mongolia: Mongolia
+  montenegro: Montenegro
+  montserrat: Montserrat
+  mozambique: Mozambique
+  myanmar: Myanmar
+  namibia: Namibia
+  nauru: Nauru
+  new_caledonia: New
+  new_guinea: New
+  nicaragua: Nicaragua
+  niger: Niger
+  nigeria: Nigeria
+  niue: Niue
+  norfolk_island: Norfolk
+  oman: Oman
+  palau: Palau
+  palestine: Palestine
+  paraguay: Paraguay
+  pitcairn: Pitcairn
+  puerto_rico: Puerto
+  réunion: Réunion
+  rwanda: Rwanda
+  saint_barthélemy: Saint
+  saint_lucia: Saint
+  samoa: Samoa
+  san_marino: San
+  sao_tome_and_principe: Sao
+  senegal: Senegal
+  seychelles: Seychelles
+  sierra_leone: Sierra
+  slovakia: Slovakia
+  slovenia: Slovenia
+  solomon_islands: Solomon
+  somalia: Somalia
+  south_sudan: South
+  sudan: Sudan
+  suriname: Suriname
+  syria: Syria
+  tajikistan: Tajikistan
+  tanzania: Tanzania
+  timor-leste: Timor-Leste
+  togo: Togo
+  tokelau: Tokelau
+  tonga: Tonga
+  trinidad_and_tobago: Trinidad
+  tunisia: Tunisia
+  turkmenistan: Turkmenistan
+  turks_and_caicos: Turks
+  tuvalu: Tuvalu
+  uganda: Uganda
+  uruguay: Uruguay
+  uzbekistan: Uzbekistan
+  vanuatu: Vanuatu
+  venezuela: Venezuela
+  yemen: Yemen
+  zambia: Zambia
+  zimbabwe: Zimbabwe
 collections:
   bafta_best:
     name: BAFTA Best Films
